--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "core-js": "^3.8.3",
     "hchs-vue-charts": "^1.2.8",
     "json-editor-vue": "^0.5.1",
+    "json-editor-vue3": "^1.0.6",
     "vanilla-jsoneditor": "^0.6.4",
     "vue": "^3.2.13",
     "vue-chartjs": "^4.1.1",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "write-json": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -23,6 +25,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "electron": "^20.1.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
