--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vanilla-jsoneditor": "^0.6.4",
     "vue": "^3.2.13",
     "vue-chartjs": "^4.1.1",
+    "vue-fullscreen": "^2.6.1",
     "vue-router": "^4.1.5",
     "write-json": "^3.0.1"
   },
