--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "json-editor-vue3": "^1.0.6",
     "vanilla-jsoneditor": "^0.6.4",
     "vue": "^3.2.13",
+    "vue-3-socket.io": "^1.0.5",
     "vue-chartjs": "^4.1.1",
     "vue-fullscreen": "^2.6.1",
     "vue-router": "^4.1.5",
+    "vue-socket.io": "^3.0.10",
     "write-json": "^3.0.1"
   },
   "devDependencies": {
