--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-fullscreen": "^2.6.1",
     "vue-router": "^4.1.5",
     "vue-socket.io": "^3.0.10",
+    "vuex": "^4.0.2",
     "write-json": "^3.0.1"
   },
   "devDependencies": {
