--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "firebase": "^9.10.0",
     "hchs-vue-charts": "^1.2.8",
     "json-editor-vue": "^0.5.1",
     "json-editor-vue3": "^1.0.6",
@@ -20,6 +21,7 @@
     "vue-fullscreen": "^2.6.1",
     "vue-router": "^4.1.5",
     "vue-socket.io": "^3.0.10",
+    "vuefire": "^2.2.5",
     "write-json": "^3.0.1"
   },
   "devDependencies": {
