--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
+    "firebase": "^9.10.0",
     "hchs-vue-charts": "^1.2.8",
     "json-editor-vue": "^0.5.1",
     "json-editor-vue3": "^1.0.6",
